    arguments, the newly only acceptable means, rather than as positional
    ones which they continue to take themselves.

    * Updated the test suite to account for the following breaking changes
    introduced in Locale::KeyedText version 1.06_3: The as_string() methods
    last seen in release 1.060002 are now named as_debug_str() in 2.0.0.

    * Locale::KeyedText is now licensed under the terms of the GNU Lesser
    General Public License (LGPL) version 3 or later, rather than version
    2.1+ of the same license.  The text of the updated license is now in
    the 2 files LICENSE/LGPL and LICENSE/GPL rather than 1 file "LGPL".

    * Update AUTHOR emails from perl@ to darren@.

    * Rewrote most of the Makefile.PL (and META.yml) to make its format
    more modern, in particular by distinguishing between dependencies that
    are needed to use the Locale::KeyedText module and those needed only
    for testing it or for configuring the distribution; previously, the
    dependencies needed only for testing were treated as if necessary to
    use Locale::KeyedText itself; also added a list of "resources" urls.

    * Modernize the headings of the distribution files {Changes, README,
    TODO} and tweak the INSTALL file.  Modernize the content of the README
    file on Locale::KeyedText version control or other resources are.

    * Remove superfluous generic code comments.

    * Incremented all copyright year range-ends to 2016 (from 2006).

    * Fleshed out this distribution's "Changes" file to restore all of the
    detail entries that earlier releases contained and subsequent releases
    had purged.  And so as of the current release 2.0.0 the "Changes" file
    should have a complete accounting of the project history, the only
    thing being more thorough than that being the project version control.

    * This is the Locale-KeyedText-2.0.0 file manifest:

        Changes
        examples/inverter1/MyApp.pl
        examples/inverter1/MyApp/L/Eng.pm