@@ -89,6 +89,12 @@
     introduced in Locale::KeyedText version 1.06_3: The as_string() methods
     last seen in release 1.060002 are now named as_debug_str() in 2.0.0.
 
+    * Updated the test suite to account for the following breaking changes
+    introduced in Locale::KeyedText version 1.06_3:  Renamed all the
+    accessor methods to be more terse, as follows: get_message_key() ->
+    get_msg_key(), get_message_variable[|s]() -> get_msg_var[|s](),
+    get_template_[set|member]_names() -> get_[set|member]_names().
+
     * Locale::KeyedText is now licensed under the terms of the GNU Lesser
     General Public License (LGPL) version 3 or later, rather than version
     2.1+ of the same license.  The text of the updated license is now in
